<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/firstFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screenBackground"
    tools:context=".FirstFragment">

    <LinearLayout
        android:id="@+id/primerLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/randomButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginBottom="10dp"
            android:background="@color/buttonBackground"
            android:text="@string/randomButtonText"
            android:textColor="@color/colorPrimaryDark"
            android:textColorLink="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/countButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginBottom="10dp"
            android:background="@color/buttonBackground"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/countButtonText"
            android:textColor="@color/colorPrimaryDark"
            android:textColorLink="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/toastButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginBottom="10dp"
            android:background="@color/buttonBackground"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/toastButtonText"
            android:textColor="@color/colorPrimaryDark"
            android:textColorLink="@color/colorPrimaryDark" />

    </LinearLayout>

    <TextView
        android:id="@+id/textviewFirst"
        android:layout_width="48dp"
        android:layout_height="66dp"
        android:layout_marginEnd="50dp"
        android:background="@color/screenBackground"
        android:text="@string/textviewFirstText"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHighlight="#FF5722"
        android:textColorHint="#531C0B"
        android:textColorLink="#FF5722"
        android:textSize="45sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/primerLayout"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="NotSibling" />

    <TextView
        android:id="@+id/textViewLeyenda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        android:text="@string/textviewTexto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.154" />

</androidx.constraintlayout.widget.ConstraintLayout>