<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screenBackground"
    tools:context=".SecondFragment">

    <TextView
        android:id="@+id/textviewHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textviewHeaderText"
        android:textAlignment="center"
        android:textStyle="bold|italic"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewRandom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintVertical_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewRandom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="182dp"
        android:text="@string/textViewRandomText"
        android:textAlignment="center"
        android:textSize="72sp"
        android:textStyle="bold|italic"
        app:layout_constraintVertical_bias="0.45"
        app:layout_constraintBottom_toTopOf="@+id/buttonSecond"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textviewHeader" />

    <Button
        android:id="@+id/buttonSecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonSecondText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRandom" />


</androidx.constraintlayout.widget.ConstraintLayout>